# aoe_cxx

./: CMakeLists.txt  README.md
modules/async/: CMakeLists.txt
modules/async/coroutine/: CMakeLists.txt
modules/async/coroutine/src/coroutine/: base.cpp  pool.cpp  promise.cpp  thread_context.cpp
modules/async/coroutine/test/: coroutine-one_to_one_pipe-faster_receiver.cpp  coroutine-one_to_one_pipe-faster_sender.cpp  coroutine-one_to_one_pipe-select_receivers.cpp  coroutine-one_to_one_pipe-select_senders.cpp  coroutine-one_to_one_pipe-zero_buffer.cpp  coroutine-one_to_one_pipe.cpp  coroutine-pipe.cpp  coroutine-pool.cpp  coroutine-selector.cpp  coroutine-sized_allocator.cpp  coroutine-sized_vector.cpp
modules/async/coroutine/test/coroutine-cache/: main.cpp
modules/async/coroutine/test/coroutine-pipe/: main.cpp
modules/async/coroutine/test/coroutine-selector/: main.cpp
modules/async/coroutine/test/coroutine-sized_allocator-parallel_delete/: main.cpp
modules/async/coroutine/test/coroutine-sized_cache-parallel_delete/: main.cpp
modules/macro/: CMakeLists.txt
modules/macro/include/aoe/: macro.h
modules/macro/src/macro-gen-argument/: main.cpp
modules/macro/src/macro-gen-concat/: main.cpp
modules/macro/src/macro-gen-invoke/: main.cpp
modules/macro/test/macro/: main.cpp
modules/match/: CMakeLists.txt
modules/match/include/aoe/: match.h
modules/match/test/match/: main.cpp
modules/match/test/match-template/: main.cpp
modules/panic/: CMakeLists.txt
modules/panic/include/aoe/: panic.h
modules/panic/test/panic/: main.cpp
modules/playground/: CMakeLists.txt
modules/playground/test/p1/: main.cpp
modules/playground/test/p2/: main.cpp
modules/playground/test/p3/: main.cpp
modules/trait/: CMakeLists.txt
modules/trait/include/aoe/: trait.h
modules/trait/test/trait/: main.cpp
(+36 files in other folders)
